[package]
name = "magnet-chain-state-snapshot"
authors.workspace = true
description = "Runtime API definition of magnet-primitives-order"
edition.workspace = true
license = "Unlicense"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
[dependencies]

# Substrate
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"  , default-features = false}
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"  , default-features = false}
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"  , default-features = false}


[features]
default = [ "std" ]
std = [ "parity-scale-codec/std", "sp-runtime/std", "sp-state-machine/std", "sp-trie/std" ]
