[package]
name = "magnet-primitives-order"
authors.workspace = true
description = "Runtime API definition of magnet-primitives-order"
edition.workspace = true
license = "Unlicense"
version = "0.2.0"

[dependencies]
log = { version = "0.4.14", default-features = false }
hex-literal = { version = "0.3.4" }
async-trait = { version = "0.1", optional = true }
scale-info = { version = "2.1.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive","full", "bit-vec"
] }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"  , default-features = false}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false , optional = true }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" , default-features = false }
sp-consensus-aura= { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io ={ git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"scale-info/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"cumulus-relay-chain-interface",
	"sp-state-machine/std",
	"cumulus-primitives-core/std",
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-std/std",
	"sp-weights/std",
	"sp-session/std",
	"sp-consensus-grandpa/std",
]