[package]
name = "mp-system"
version = "0.1.0"
authors = ["Alex Wang"]
description = "System trait and type."
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Substrate
sp-api = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
frame-support = { workspace = true, default-features = false}

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-core/std",
	"frame-support/std",
]