[package]
name = "magnet-client-consensus-aura"
authors = ["Anonymous"]
description = "magnet-consensus"
license = "Apache License 2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true, features = [ "derive" ] }
futures = { workspace = true }
tracing = { workspace = true }
schnellru = { workspace = true }
log = { workspace = true }

# Local
magnet-primitives-order = { path = "../../../primitives/order"}

# Substrate
sc-client-api = { workspace = true }
sc-consensus = {  workspace = true }
sc-consensus-aura = {  workspace = true }
sc-consensus-babe = {  workspace = true }
sc-consensus-slots = {  workspace = true }
sc-telemetry = {  workspace = true }
sp-api = {  workspace = true }
sp-application-crypto = {  workspace = true }
sp-block-builder = {  workspace = true }
sp-blockchain = {  workspace = true }
sp-consensus = {  workspace = true }
sp-consensus-aura = {  workspace = true }
sp-core = {  workspace = true }
sp-inherents = {  workspace = true }
sp-keystore = {  workspace = true }
sp-runtime = {  workspace = true }
sp-timestamp = {  workspace = true }
sp-state-machine = {  workspace = true }
substrate-prometheus-endpoint = {  workspace = true }

# Cumulus
cumulus-client-consensus-common = {  workspace = true }
cumulus-client-parachain-inherent = {  workspace = true }
cumulus-relay-chain-interface = {  workspace = true }
cumulus-client-consensus-proposer = {  workspace = true }
cumulus-primitives-aura = {  workspace = true }
cumulus-primitives-core = {  workspace = true }
cumulus-primitives-parachain-inherent = {  workspace = true }
cumulus-client-collator = {  workspace = true }
cumulus-client-consensus-aura= {  workspace = true }
# Polkadot
polkadot-primitives = {  workspace = true }
polkadot-node-primitives = {  workspace = true }
polkadot-node-subsystem = {  workspace = true }
polkadot-overseer = {  workspace = true }