[package]
name = "pallet-pot-rpc"
version = "0.1.0"
authors = ["Alex Wang"]
description = "Pot rpc"
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
pallet-pot-runtime-api = { path = "../runtime-api", default-features = false }

# Substrate
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
