[package]
name = "pallet-pot-rpc"
version = "0.1.0"
authors = ["Alex Wang"]
description = "Pot rpc"
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
pallet-pot-runtime-api = { path = "../runtime-api", default-features = false }

# Substrate
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
