[package]
name = "pallet-pot-runtime-api"
version = "0.1.0"
authors = ["Alex Wang"]
description = "Pot runtime api"
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Substrate
sp-api = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-runtime/std",
]