[package]
name = "mp-coretime-common"
authors.workspace = true
description = "primitives related to coretime"
edition.workspace = true
license = "Unlicense"
version = "0.2.0"

[dependencies]
log = { workspace = true, default-features = false }
hex-literal = { workspace = true }
async-trait = { workspace = true, optional = true }
scale-info = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = [
	"derive","full", "bit-vec"
] }
sp-api = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-trie = { workspace = true, default-features = false }
cumulus-relay-chain-interface = { workspace = true, default-features = false , optional = true }
sp-state-machine = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true , default-features = false }
sp-consensus-aura= { workspace = true, default-features = false }
sp-io ={ workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }


[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"scale-info/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"cumulus-relay-chain-interface",
	"sp-state-machine/std",
	"cumulus-primitives-core/std",
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-std/std",
	"sp-weights/std",
	"sp-session/std",
	"sp-consensus-grandpa/std",
]