[package]
name = "pallet-precompile-substrate-utils"
version = "0.1.0"
authors = ["Alex Wang"]
description = "precompile substrate-utils for Magnet."
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false}

#Frontier FRAME
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }

# Frontier Primitive
fp-evm = { version = "3.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }
fp-account = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }

[features]
default = ["std"]
std = [
	# Substrate
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	# Frontier
	"fp-evm/std",
	"fp-account/std",
	"precompile-utils/std",
	#Frontier FRAME
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-evm/try-runtime",
]