[package]
name = "pallet-precompile-substrate-utils"
version = "0.1.0"
authors = ["Alex Wang"]
description = "precompile substrate-utils for Magnet."
license = "Apache-2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Substrate
sp-io = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
frame-support = { workspace = true, default-features = false}

#Frontier FRAME
pallet-evm = { workspace = true, default-features = false }

# Frontier Primitive
fp-evm = { workspace = true, default-features = false }
fp-account = { workspace = true, default-features = false }
precompile-utils = { workspace = true, default-features = false }

[dev-dependencies]
frame-system = { workspace = true, default-features = false}
pallet-balances = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false}


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	# Substrate
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	# Frontier
	"fp-evm/std",
	"fp-account/std",
	"precompile-utils/std",
	#Frontier FRAME
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-evm/try-runtime",
]